added hemi and reverse rois

--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +54,6 @@
     "sub_info = pd.read_csv(f'{curr_dir}/sub_info.csv')\n",
     "\n",
     "\n",
-    "data_summary = pd.read_csv(f'{results_dir}/hemispace_summary_vals{suf}.csv')\n",
-    "\n",
-    "#extract patients only\n",
-    "data_summary = data_summary[data_summary['group'] == 'patient']\n",
-    "\n",
-    "# for each sub in data_summary, get the sub's code from sub_info\n",
-    "for sub in data_summary['sub'].unique():\n",
-    "    sub_code = sub_info[sub_info['sub'] == sub]['code'].values[0]\n",
-    "    data_summary.loc[data_summary['sub'] == sub, 'sub_code'] = sub_code\n",
     "\n",
     "sub_info = params.sub_info\n",
     "#extract patients only\n",
@@ -74,27 +65,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['SI', 'left', 'Summed Selectivity', '-', '*', '*', '-', '-', '-', '*', '*']\n",
+      "mean_act selectivity Activation\n",
+      "['SI', 'left', 'Activation', '-', '-', '-', '-', '*', '-', '*', '*']\n",
+      "volume selectivity Volume\n",
+      "['SI', 'left', 'Volume', '-', '*', '*', '-', '-', '-', '*', '*']\n",
+      "acc decoding Decoding\n",
+      "['SI', 'left', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['BI', 'left', 'Summed Selectivity', '*', '*', '-', '-', '-', '-', '-', '-']\n",
+      "mean_act selectivity Activation\n",
+      "['BI', 'left', 'Activation', '*', '*', '-', '-', '-', '-', '-', '-']\n",
+      "volume selectivity Volume\n",
+      "['BI', 'left', 'Volume', '*', '*', '-', '-', '-', '-', '-', '-']\n",
+      "acc decoding Decoding\n",
+      "['BI', 'left', 'Decoding', '*', '*', '*', '*', '-', '-', '-', '-']\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['BN', 'left', 'Summed Selectivity', '-', '-', '-', '-', '*', '*', '-', '-']\n",
+      "mean_act selectivity Activation\n",
+      "['BN', 'left', 'Activation', '-', '-', '-', '-', '-', '-', '-', '*']\n",
+      "volume selectivity Volume\n",
+      "['BN', 'left', 'Volume', '-', '-', '-', '-', '*', '*', '-', '-']\n",
+      "acc decoding Decoding\n",
+      "['BN', 'left', 'Decoding', '*', '*', '-', '-', '-', '-', '-', '-']\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['XC', 'left', 'Summed Selectivity', '*', '*', '*', '*', '-', '-', '-', '*']\n",
+      "mean_act selectivity Activation\n",
+      "['XC', 'left', 'Activation', '*', '*', '*', '*', '-', '-', '-', '*']\n",
+      "volume selectivity Volume\n",
+      "['XC', 'left', 'Volume', '*', '*', '*', '*', '-', '-', '-', '*']\n",
+      "acc decoding Decoding\n",
+      "['XC', 'left', 'Decoding', '*', '*', '*', '*', '-', '-', '-', '-']\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['KT', 'right', 'Summed Selectivity', '-', '-', '-', '-', 'n/a', 'n/a', '-', '*']\n",
+      "mean_act selectivity Activation\n",
+      "['KT', 'right', 'Activation', '-', '-', '-', '-', 'n/a', 'n/a', '-', '*']\n",
+      "volume selectivity Volume\n",
+      "['KT', 'right', 'Volume', '-', '-', '-', '-', 'n/a', 'n/a', '-', '-']\n",
+      "acc decoding Decoding\n",
+      "['KT', 'right', 'Decoding', '-', '-', '-', '-', 'n/a', 'n/a', '-', '-']\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['FO', 'right', 'Summed Selectivity', '*', '-', '-', '-', '-', '-', '*', '*']\n",
+      "mean_act selectivity Activation\n",
+      "['FO', 'right', 'Activation', '-', '-', '-', '-', '-', '-', '*', '*']\n",
+      "volume selectivity Volume\n",
+      "['FO', 'right', 'Volume', '*', '-', '-', '-', '-', '-', '*', '*']\n",
+      "acc decoding Decoding\n",
+      "['FO', 'right', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['KN', 'right', 'Summed Selectivity', '-', '-', '-', '-', '-', '-', '*', '*']\n",
+      "mean_act selectivity Activation\n",
+      "['KN', 'right', 'Activation', '-', '-', '-', '-', '-', '-', '*', '*']\n",
+      "volume selectivity Volume\n",
+      "['KN', 'right', 'Volume', '-', '-', '-', '-', '-', '-', '*', '*']\n",
+      "acc decoding Decoding\n",
+      "['KN', 'right', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "['EB', 'right', 'Summed Selectivity', '-', '-', '-', '-', '-', '-', '*', '-']\n",
+      "mean_act selectivity Activation\n",
+      "['EB', 'right', 'Activation', '-', '-', '-', '-', '-', '-', '*', '*']\n",
+      "volume selectivity Volume\n",
+      "['EB', 'right', 'Volume', '-', '-', '-', '-', '-', '-', '*', '-']\n",
+      "acc decoding Decoding\n",
+      "['EB', 'right', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Create a table with each patient's summary values for each condition and ROI\n",
     "\"\"\"\n",
-    "patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', 'word_ipsi', 'word_contra','face_ipsi', 'face_contra', 'tool_ipsi', 'tool_contra', 'space_ipsi', 'space_contra'])\n",
+    "patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', 'analysis','word_ipsi', 'word_contra','face_ipsi', 'face_contra', 'tool_ipsi', 'tool_contra', 'space_ipsi', 'space_contra'])\n",
     "\n",
     "\n",
     "\n",
     "conds = ['word', 'face', 'tool', 'space']\n",
     "rois = ['ventral_visual_cortex', 'ventral_visual_cortex', 'dorsal_visual_cortex', 'dorsal_visual_cortex']\n",
     "\n",
-    "summary_val = ['sum_selec_norm']\n",
+    "summary_val = ['sum_selec_norm', 'mean_act', 'volume', 'acc']\n",
+    "summary_type = ['selectivity','selectivity','selectivity','decoding']\n",
+    "summary_name = ['Summed Selectivity', 'Activation', 'Volume', 'Decoding']\n",
     "\n",
-    "for val in summary_val:\n",
-    "    act_resamples = pd.read_csv(f'{results_dir}/resamples/{val}_resamples{suf}.csv')\n",
     "\n",
-    "    for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
+    "\n",
+    "for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
+    "    \n",
+    "\n",
+    "    for val, sum_type, sum_name in zip(summary_val, summary_type,summary_name):\n",
+    "        print(val, sum_type, sum_name)\n",
+    "        act_resamples = pd.read_csv(f'{results_dir}/{sum_type}/resamples/{val}_resamples{suf}.csv')\n",
+    "\n",
+    "        data_summary = pd.read_csv(f'{results_dir}/{sum_type}/{sum_type}_summary{suf}.csv')\n",
+    "\n",
+    "        #extract patients only\n",
+    "        data_summary = data_summary[data_summary['group'] == 'patient']\n",
     "        patient_vals = []\n",
+    "        # for each sub in data_summary, get the sub's code from sub_info\n",
+    "        for sub in data_summary['sub'].unique():\n",
+    "            sub_code = sub_info[sub_info['sub'] == sub]['code'].values[0]\n",
+    "            data_summary.loc[data_summary['sub'] == sub, 'sub_code'] = sub_code\n",
+    "\n",
+    "        #loop through condition for each patient    \n",
     "        for cond, roi in zip(conds, rois):\n",
     "            patient_data = data_summary[(data_summary['sub_code'] == code) & (data_summary['cond'] == cond) & (data_summary['roi'] == roi) & (data_summary['hemi'] == hemi)]\n",
     "            #check if patient has data for this condition\n",
@@ -123,13 +202,71 @@
     "                patient_vals = patient_vals + ['n/a', 'n/a']\n",
     "\n",
     "        #add to dataframe\n",
-    "        patient_vals = [code, hemi] + patient_vals\n",
+    "        patient_vals = [code, hemi, sum_name] + patient_vals\n",
+    "        print(patient_vals)\n",
     "        patient_summary.loc[len(patient_summary)] = patient_vals\n",
     "\n",
     "#capitalize hemi\n",
     "patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
     "#save table\n",
     "patient_summary.to_csv(f'{results_dir}/tables/patient_summary_rois.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SI',\n",
+       " 'left',\n",
+       " 'Decoding',\n",
+       " 'SI',\n",
+       " 'left',\n",
+       " 'Decoding',\n",
+       " '-',\n",
+       " '*',\n",
+       " '*',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '*',\n",
+       " '*',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '*',\n",
+       " '-',\n",
+       " '*',\n",
+       " '*',\n",
+       " '-',\n",
+       " '*',\n",
+       " '*',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '*',\n",
+       " '*',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-',\n",
+       " '-']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[code, hemi, sum_name] + patient_vals"
    ]
   },
   {
