--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,69 +73,29 @@
      "output_type": "stream",
      "text": [
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['SI', 'left', 'Summed Selectivity', '-', '*', '*', '-', '-', '-', '*', '*']\n",
-      "mean_act selectivity Activation\n",
-      "['SI', 'left', 'Activation', '-', '-', '-', '-', '*', '-', '*', '*']\n",
-      "volume selectivity Volume\n",
-      "['SI', 'left', 'Volume', '-', '*', '*', '-', '-', '-', '*', '*']\n",
-      "acc decoding Decoding\n",
-      "['SI', 'left', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n",
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['BI', 'left', 'Summed Selectivity', '*', '*', '-', '-', '-', '-', '-', '-']\n",
-      "mean_act selectivity Activation\n",
-      "['BI', 'left', 'Activation', '*', '*', '-', '-', '-', '-', '-', '-']\n",
-      "volume selectivity Volume\n",
-      "['BI', 'left', 'Volume', '*', '*', '-', '-', '-', '-', '-', '-']\n",
-      "acc decoding Decoding\n",
-      "['BI', 'left', 'Decoding', '*', '*', '*', '*', '-', '-', '-', '-']\n",
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['BN', 'left', 'Summed Selectivity', '-', '-', '-', '-', '*', '*', '-', '-']\n",
-      "mean_act selectivity Activation\n",
-      "['BN', 'left', 'Activation', '-', '-', '-', '-', '-', '-', '-', '*']\n",
-      "volume selectivity Volume\n",
-      "['BN', 'left', 'Volume', '-', '-', '-', '-', '*', '*', '-', '-']\n",
-      "acc decoding Decoding\n",
-      "['BN', 'left', 'Decoding', '*', '*', '-', '-', '-', '-', '-', '-']\n",
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['XC', 'left', 'Summed Selectivity', '*', '*', '*', '*', '-', '-', '-', '*']\n",
-      "mean_act selectivity Activation\n",
-      "['XC', 'left', 'Activation', '*', '*', '*', '*', '-', '-', '-', '*']\n",
-      "volume selectivity Volume\n",
-      "['XC', 'left', 'Volume', '*', '*', '*', '*', '-', '-', '-', '*']\n",
-      "acc decoding Decoding\n",
-      "['XC', 'left', 'Decoding', '*', '*', '*', '*', '-', '-', '-', '-']\n",
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['KT', 'right', 'Summed Selectivity', '-', '-', '-', '-', 'n/a', 'n/a', '-', '*']\n",
-      "mean_act selectivity Activation\n",
-      "['KT', 'right', 'Activation', '-', '-', '-', '-', 'n/a', 'n/a', '-', '*']\n",
-      "volume selectivity Volume\n",
-      "['KT', 'right', 'Volume', '-', '-', '-', '-', 'n/a', 'n/a', '-', '-']\n",
-      "acc decoding Decoding\n",
-      "['KT', 'right', 'Decoding', '-', '-', '-', '-', 'n/a', 'n/a', '-', '-']\n",
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['FO', 'right', 'Summed Selectivity', '*', '-', '-', '-', '-', '-', '*', '*']\n",
-      "mean_act selectivity Activation\n",
-      "['FO', 'right', 'Activation', '-', '-', '-', '-', '-', '-', '*', '*']\n",
-      "volume selectivity Volume\n",
-      "['FO', 'right', 'Volume', '*', '-', '-', '-', '-', '-', '*', '*']\n",
-      "acc decoding Decoding\n",
-      "['FO', 'right', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n",
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['KN', 'right', 'Summed Selectivity', '-', '-', '-', '-', '-', '-', '*', '*']\n",
-      "mean_act selectivity Activation\n",
-      "['KN', 'right', 'Activation', '-', '-', '-', '-', '-', '-', '*', '*']\n",
-      "volume selectivity Volume\n",
-      "['KN', 'right', 'Volume', '-', '-', '-', '-', '-', '-', '*', '*']\n",
-      "acc decoding Decoding\n",
-      "['KN', 'right', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n",
       "sum_selec_norm selectivity Summed Selectivity\n",
-      "['EB', 'right', 'Summed Selectivity', '-', '-', '-', '-', '-', '-', '*', '-']\n",
-      "mean_act selectivity Activation\n",
-      "['EB', 'right', 'Activation', '-', '-', '-', '-', '-', '-', '*', '*']\n",
-      "volume selectivity Volume\n",
-      "['EB', 'right', 'Volume', '-', '-', '-', '-', '-', '-', '*', '-']\n",
-      "acc decoding Decoding\n",
-      "['EB', 'right', 'Decoding', '-', '-', '-', '-', '-', '-', '-', '-']\n"
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n"
      ]
     }
    ],
@@ -145,71 +105,79 @@
     "\"\"\"\n",
     "patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', 'analysis','word_ipsi', 'word_contra','face_ipsi', 'face_contra', 'tool_ipsi', 'tool_contra', 'space_ipsi', 'space_contra'])\n",
     "\n",
+    "table_names = ['primary','hemi','contrast']\n",
     "\n",
-    "\n",
-    "conds = ['word', 'face', 'tool', 'space']\n",
-    "rois = ['ventral_visual_cortex', 'ventral_visual_cortex', 'dorsal_visual_cortex', 'dorsal_visual_cortex']\n",
+    "all_conds = [['word', 'face', 'tool', 'space'],['word', 'face', 'tool', 'space'],['word', 'face', 'tool', 'space']]\n",
+    "all_rois = [['ventral_visual_cortex', 'ventral_visual_cortex', 'dorsal_visual_cortex', 'dorsal_visual_cortex'], \n",
+    "        ['hemi','hemi','hemi','hemi'], \n",
+    "        ['dorsal_visual_cortex', 'dorsal_visual_cortex', 'ventral_visual_cortex', 'ventral_visual_cortex']]\n",
     "\n",
     "summary_val = ['sum_selec_norm', 'mean_act', 'volume', 'acc']\n",
     "summary_type = ['selectivity','selectivity','selectivity','decoding']\n",
     "summary_name = ['Summed Selectivity', 'Activation', 'Volume', 'Decoding']\n",
     "\n",
+    "summary_val = ['sum_selec_norm']\n",
+    "summary_type = ['selectivity']\n",
+    "summary_name = ['Summed Selectivity']\n",
     "\n",
     "\n",
-    "for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
-    "    \n",
+    "for table_name in enumerate(table_names):\n",
+    "    conds = all_conds[table_name[0]]\n",
+    "    rois = all_rois[table_name[0]]\n",
+    "    for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
+    "        \n",
     "\n",
-    "    for val, sum_type, sum_name in zip(summary_val, summary_type,summary_name):\n",
-    "        print(val, sum_type, sum_name)\n",
-    "        act_resamples = pd.read_csv(f'{results_dir}/{sum_type}/resamples/{val}_resamples{suf}.csv')\n",
+    "        for val, sum_type, sum_name in zip(summary_val, summary_type,summary_name):\n",
+    "            print(val, sum_type, sum_name)\n",
+    "            act_resamples = pd.read_csv(f'{results_dir}/{sum_type}/resamples/{val}_resamples{suf}.csv')\n",
     "\n",
-    "        data_summary = pd.read_csv(f'{results_dir}/{sum_type}/{sum_type}_summary{suf}.csv')\n",
+    "            data_summary = pd.read_csv(f'{results_dir}/{sum_type}/{sum_type}_summary{suf}.csv')\n",
     "\n",
-    "        #extract patients only\n",
-    "        data_summary = data_summary[data_summary['group'] == 'patient']\n",
-    "        patient_vals = []\n",
-    "        # for each sub in data_summary, get the sub's code from sub_info\n",
-    "        for sub in data_summary['sub'].unique():\n",
-    "            sub_code = sub_info[sub_info['sub'] == sub]['code'].values[0]\n",
-    "            data_summary.loc[data_summary['sub'] == sub, 'sub_code'] = sub_code\n",
+    "            #extract patients only\n",
+    "            data_summary = data_summary[data_summary['group'] == 'patient']\n",
+    "            patient_vals = []\n",
+    "            # for each sub in data_summary, get the sub's code from sub_info\n",
+    "            for sub in data_summary['sub'].unique():\n",
+    "                sub_code = sub_info[sub_info['sub'] == sub]['code'].values[0]\n",
+    "                data_summary.loc[data_summary['sub'] == sub, 'sub_code'] = sub_code\n",
     "\n",
-    "        #loop through condition for each patient    \n",
-    "        for cond, roi in zip(conds, rois):\n",
-    "            patient_data = data_summary[(data_summary['sub_code'] == code) & (data_summary['cond'] == cond) & (data_summary['roi'] == roi) & (data_summary['hemi'] == hemi)]\n",
-    "            #check if patient has data for this condition\n",
-    "            if len(patient_data) > 0:\n",
-    "                for control_hemi in hemis:\n",
-    "                    control_col = f'{cond}_{control_hemi}_{roi}'\n",
-    "                    control_data = act_resamples[control_col]\n",
+    "            #loop through condition for each patient    \n",
+    "            for cond, roi in zip(conds, rois):\n",
+    "                patient_data = data_summary[(data_summary['sub_code'] == code) & (data_summary['cond'] == cond) & (data_summary['roi'] == roi) & (data_summary['hemi'] == hemi)]\n",
+    "                #check if patient has data for this condition\n",
+    "                if len(patient_data) > 0:\n",
+    "                    for control_hemi in hemis:\n",
+    "                        control_col = f'{cond}_{control_hemi}_{roi}'\n",
+    "                        control_data = act_resamples[control_col]\n",
     "\n",
-    "                    #calcualte 95% CI for control data\n",
-    "                    control_ci = np.percentile(control_data, [alpha/2, 100-(alpha/2)])\n",
-    "                    \n",
+    "                        #calcualte 95% CI for control data\n",
+    "                        control_ci = np.percentile(control_data, [alpha/2, 100-(alpha/2)])\n",
+    "                        \n",
     "\n",
-    "                    #if patient data is outside of control CI, add to table\n",
-    "                    if (patient_data[val].values[0] < control_ci[0]) | (patient_data[val].values[0] > control_ci[1]):\n",
-    "                        current_val = '*'\n",
-    "                    else:\n",
-    "                        current_val  = '-'\n",
+    "                        #if patient data is outside of control CI, add to table\n",
+    "                        if (patient_data[val].values[0] < control_ci[0]) | (patient_data[val].values[0] > control_ci[1]):\n",
+    "                            current_val = '*'\n",
+    "                        else:\n",
+    "                            current_val  = '-'\n",
     "\n",
-    "                    if control_hemi == hemi:\n",
-    "                        ipsi_val = current_val\n",
-    "                    else:\n",
-    "                        contra_val = current_val\n",
-    "                    \n",
-    "                patient_vals = patient_vals + [ipsi_val, contra_val]\n",
-    "            else:\n",
-    "                patient_vals = patient_vals + ['n/a', 'n/a']\n",
+    "                        if control_hemi == hemi:\n",
+    "                            ipsi_val = current_val\n",
+    "                        else:\n",
+    "                            contra_val = current_val\n",
+    "                        \n",
+    "                    patient_vals = patient_vals + [ipsi_val, contra_val]\n",
+    "                else:\n",
+    "                    patient_vals = patient_vals + ['n/a', 'n/a']\n",
     "\n",
-    "        #add to dataframe\n",
-    "        patient_vals = [code, hemi, sum_name] + patient_vals\n",
-    "        print(patient_vals)\n",
-    "        patient_summary.loc[len(patient_summary)] = patient_vals\n",
+    "            #add to dataframe\n",
+    "            patient_vals = [code, hemi, sum_name] + patient_vals\n",
+    "            \n",
+    "            patient_summary.loc[len(patient_summary)] = patient_vals\n",
     "\n",
-    "#capitalize hemi\n",
-    "patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
-    "#save table\n",
-    "patient_summary.to_csv(f'{results_dir}/tables/patient_summary_rois.csv', index = False)"
+    "    #capitalize hemi\n",
+    "    patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
+    "    #save table\n",
+    "    patient_summary.to_csv(f'{results_dir}/tables/patient_summary_{table_name[1]}.csv', index = False)"
    ]
   },
   {
