--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -65,43 +65,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n",
-      "sum_selec_norm selectivity Summed Selectivity\n"
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n",
+      "acc decoding Decoding\n"
      ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Create a table with each patient's summary values for each condition and ROI\n",
+    "Create a table with symbols indicating whether htey are inside or outside distribution for each condition and ROI\n",
     "\"\"\"\n",
     "\n",
     "\n",
@@ -116,9 +116,11 @@
     "summary_type = ['selectivity','selectivity','selectivity','decoding']\n",
     "summary_name = ['Summed Selectivity', 'Activation', 'Volume', 'Decoding']\n",
     "\n",
-    "summary_val = ['sum_selec_norm']\n",
-    "summary_type = ['selectivity']\n",
-    "summary_name = ['Summed Selectivity']\n",
+    "summary_val = ['acc']\n",
+    "summary_type = ['decoding']\n",
+    "summary_name = ['Decoding']\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "for table_name in enumerate(table_names):\n",
@@ -179,7 +181,130 @@
     "    #capitalize hemi\n",
     "    patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
     "    #save table\n",
-    "    patient_summary.to_csv(f'{results_dir}/tables/patient_summary_{table_name[1]}.csv', index = False)"
+    "    patient_summary.to_csv(f'{results_dir}/tables/{summary_val}_summary_{table_name[1]}.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Create a table with symbols indicating whether htey are inside or outside distribution for each condition and ROI\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "table_names = ['primary','hemi','contrast']\n",
+    "\n",
+    "all_conds = [['word', 'face', 'tool', 'space'],['word', 'face', 'tool', 'space'],['word', 'face', 'tool', 'space']]\n",
+    "all_rois = [['ventral_visual_cortex', 'ventral_visual_cortex', 'dorsal_visual_cortex', 'dorsal_visual_cortex'], \n",
+    "        ['hemi','hemi','hemi','hemi'], \n",
+    "        ['dorsal_visual_cortex', 'dorsal_visual_cortex', 'ventral_visual_cortex', 'ventral_visual_cortex']]\n",
+    "\n",
+    "summary_val = ['sum_selec_norm', 'mean_act', 'volume', 'acc']\n",
+    "summary_type = ['selectivity','selectivity','selectivity','decoding']\n",
+    "summary_name = ['Summed Selectivity', 'Activation', 'Volume', 'Decoding']\n",
+    "\n",
+    "summary_val = ['sum_selec_norm']\n",
+    "summary_type = ['selectivity']\n",
+    "summary_name = ['Summed Selectivity']\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "for table_name in enumerate(table_names):\n",
+    "    conds = all_conds[table_name[0]]\n",
+    "    rois = all_rois[table_name[0]]\n",
+    "\n",
+    "    patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', 'analysis','word_ipsi', 'word_contra','face_ipsi', 'face_contra', 'tool_ipsi', 'tool_contra', 'space_ipsi', 'space_contra'])\n",
+    "    for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
+    "        \n",
+    "\n",
+    "        for val, sum_type, sum_name in zip(summary_val, summary_type,summary_name):\n",
+    "            print(val, sum_type, sum_name)\n",
+    "            act_resamples = pd.read_csv(f'{results_dir}/{sum_type}/resamples/{val}_resamples{suf}.csv')\n",
+    "\n",
+    "            data_summary = pd.read_csv(f'{results_dir}/{sum_type}/{sum_type}_summary{suf}.csv')\n",
+    "\n",
+    "            #extract patients only\n",
+    "            data_summary = data_summary[data_summary['group'] == 'patient']\n",
+    "            patient_vals = []\n",
+    "            # for each sub in data_summary, get the sub's code from sub_info\n",
+    "            for sub in data_summary['sub'].unique():\n",
+    "                sub_code = sub_info[sub_info['sub'] == sub]['code'].values[0]\n",
+    "                data_summary.loc[data_summary['sub'] == sub, 'sub_code'] = sub_code\n",
+    "\n",
+    "            #loop through condition for each patient    \n",
+    "            for cond, roi in zip(conds, rois):\n",
+    "                patient_data = data_summary[(data_summary['sub_code'] == code) & (data_summary['cond'] == cond) & (data_summary['roi'] == roi) & (data_summary['hemi'] == hemi)]\n",
+    "                #check if patient has data for this condition\n",
+    "                if len(patient_data) > 0:\n",
+    "                    for control_hemi in hemis:\n",
+    "                        control_col = f'{cond}_{control_hemi}_{roi}'\n",
+    "                        control_data = act_resamples[control_col]\n",
+    "\n",
+    "                        #calcualte 95% CI for control data\n",
+    "                        control_ci = np.percentile(control_data, [alpha/2, 100-(alpha/2)])\n",
+    "                        \n",
+    "\n",
+    "                        #if patient data is outside of control CI, add to table\n",
+    "                        if (patient_data[val].values[0] < control_ci[0]) | (patient_data[val].values[0] > control_ci[1]):\n",
+    "                            current_val = f'{patient_data[val].values[0]} ({control_ci[0]},  {control_ci[1]})*'\n",
+    "                        else:\n",
+    "                            current_val  = f'{patient_data[val].values[0]} ({control_ci[0]},  {control_ci[1]})-'\n",
+    "                        \n",
+    "                        \n",
+    "\n",
+    "                        if control_hemi == hemi:\n",
+    "                            ipsi_val = current_val\n",
+    "                        else:\n",
+    "                            contra_val = current_val\n",
+    "                        \n",
+    "                    patient_vals = patient_vals + [ipsi_val, contra_val]\n",
+    "                else:\n",
+    "                    patient_vals = patient_vals + ['n/a', 'n/a']\n",
+    "\n",
+    "            #add to dataframe\n",
+    "            patient_vals = [code, hemi, sum_name] + patient_vals\n",
+    "            \n",
+    "            patient_summary.loc[len(patient_summary)] = patient_vals\n",
+    "\n",
+    "    #capitalize hemi\n",
+    "    patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
+    "    #save table\n",
+    "    patient_summary.to_csv(f'{results_dir}/tables/{summary_val}_summary_{table_name[1]}_vals.csv', index = False)"
    ]
   },
   {
