--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
     "    #capitalize hemi\n",
     "    patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
     "    #save table\n",
-    "    patient_summary.to_csv(f'{results_dir}/tables/{summary_val}_summary_{table_name[1]}_vals.csv', index = False)"
+    "    patient_summary.to_csv(f'{results_dir}/tables/{val}_summary_{table_name[1]}_vals.csv', index = False)"
    ]
   },
   {
