--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Create a table with symbols indicating whether htey are inside or outside distribution for each condition and ROI\n",
+    "Create a table with values and CIs indicating whether htey are inside or outside distribution for each condition and ROI\n",
     "\"\"\"\n",
     "\n",
     "\n",
@@ -281,9 +281,9 @@
     "\n",
     "                        #if patient data is outside of control CI, add to table\n",
     "                        if (patient_data[val].values[0] < control_ci[0]) | (patient_data[val].values[0] > control_ci[1]):\n",
-    "                            current_val = f'{patient_data[val].values[0]} ({control_ci[0]},  {control_ci[1]})*'\n",
+    "                            current_val = f'{np.round(patient_data[val].values[0],0)} ({np.round(control_ci[0],0)},  {np.round(control_ci[1],0)})*'\n",
     "                        else:\n",
-    "                            current_val  = f'{patient_data[val].values[0]} ({control_ci[0]},  {control_ci[1]})-'\n",
+    "                            current_val  = f'{np.round(patient_data[val].values[0],0)} ({np.round(control_ci[0],0)},  {np.round(control_ci[1],0)})-'\n",
     "                        \n",
     "                        \n",
     "\n",
