--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,37 +65,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n",
-      "acc decoding Decoding\n"
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n",
+      "sum_selec_norm selectivity Summed Selectivity\n"
      ]
     }
    ],
@@ -116,9 +116,9 @@
     "summary_type = ['selectivity','selectivity','selectivity','decoding']\n",
     "summary_name = ['Summed Selectivity', 'Activation', 'Volume', 'Decoding']\n",
     "\n",
-    "summary_val = ['acc']\n",
-    "summary_type = ['decoding']\n",
-    "summary_name = ['Decoding']\n",
+    "summary_val = ['sum_selec_norm']\n",
+    "summary_type = ['selectivity']\n",
+    "summary_name = ['Summed Selectivity']\n",
     "\n",
     "\n",
     "\n",
@@ -181,7 +181,7 @@
     "    #capitalize hemi\n",
     "    patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
     "    #save table\n",
-    "    patient_summary.to_csv(f'{results_dir}/tables/{summary_val}_summary_{table_name[1]}.csv', index = False)"
+    "    patient_summary.to_csv(f'{results_dir}/tables/{sum_type}_summary_{table_name[1]}.csv', index = False)"
    ]
   },
   {
