updated maps -but dont like them

--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,17 +293,19 @@
     "\n",
     "        #calcualte 95% CI for control data\n",
     "        control_ci = np.percentile(control_data, [(alpha/2)*100, 100-((alpha/2)*100)])\n",
-    "        \n",
+    "\n",
     "        #check if patient has data for this condition\n",
     "        if len(patient_data) > 0:\n",
     "\n",
     "            #if patient data is outside of control CI, add to table\n",
-    "            if (patient_data[val].values[0] < control_ci[0]) or (patient_data[val].values[0] > control_ci[1]):\n",
+    "            if patient_data[val].values[0] > control_ci[1]:\n",
     "                current_vals.append('*')\n",
     "            else:\n",
     "                current_vals.append('-')\n",
     "        else:\n",
     "            current_vals.append('n/a')\n",
+    "\n",
+    "\n",
     "\n",
     "    patient_vals = [code, hemi] + current_vals\n",
     "    #add to dataframe\n",
@@ -313,7 +315,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub_code</th>\n",
+       "      <th>hemi</th>\n",
+       "      <th>word_all</th>\n",
+       "      <th>face_posterior</th>\n",
+       "      <th>face_anterior</th>\n",
+       "      <th>tool_all</th>\n",
+       "      <th>space_posterior</th>\n",
+       "      <th>space_anterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XC</td>\n",
+       "      <td>left</td>\n",
+       "      <td>-</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>left</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BI</td>\n",
+       "      <td>left</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BN</td>\n",
+       "      <td>left</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EB</td>\n",
+       "      <td>right</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KT</td>\n",
+       "      <td>right</td>\n",
+       "      <td>*</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>*</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>FO</td>\n",
+       "      <td>right</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>KN</td>\n",
+       "      <td>right</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>n/a</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sub_code   hemi word_all face_posterior face_anterior tool_all  \\\n",
+       "0       XC   left        -            n/a           n/a        -   \n",
+       "1       SI   left        -              -             *        -   \n",
+       "2       BI   left      n/a            n/a             *        *   \n",
+       "3       BN   left        -              -             -      n/a   \n",
+       "4       EB  right        -              -             *        -   \n",
+       "5       KT  right        *            n/a             *      n/a   \n",
+       "6       FO  right        -              *             -        -   \n",
+       "7       KN  right        *              -             *        -   \n",
+       "\n",
+       "  space_posterior space_anterior  \n",
+       "0               *              -  \n",
+       "1             n/a              *  \n",
+       "2               -              -  \n",
+       "3               -              *  \n",
+       "4               -              -  \n",
+       "5               *              *  \n",
+       "6               -              -  \n",
+       "7             n/a            n/a  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patient_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.43425364, 9.06819737])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "control_ci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -357,18 +539,18 @@
        "      <td>n/a</td>\n",
        "      <td>-</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SI</td>\n",
        "      <td>left</td>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -376,10 +558,10 @@
        "      <td>left</td>\n",
        "      <td>n/a</td>\n",
        "      <td>n/a</td>\n",
+       "      <td>-</td>\n",
        "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -387,19 +569,19 @@
        "      <td>left</td>\n",
        "      <td>-</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
        "      <td>n/a</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>EB</td>\n",
        "      <td>right</td>\n",
+       "      <td>-</td>\n",
        "      <td>*</td>\n",
        "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
@@ -418,10 +600,10 @@
        "      <th>6</th>\n",
        "      <td>FO</td>\n",
        "      <td>right</td>\n",
-       "      <td>*</td>\n",
        "      <td>-</td>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
        "      <td>n/a</td>\n",
        "      <td>-</td>\n",
        "    </tr>\n",
@@ -432,7 +614,7 @@
        "      <td>*</td>\n",
        "      <td>-</td>\n",
        "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>-</td>\n",
        "      <td>n/a</td>\n",
        "      <td>n/a</td>\n",
        "    </tr>\n",
@@ -443,26 +625,26 @@
       "text/plain": [
        "  sub_code   hemi word_all face_posterior face_anterior tool_all  \\\n",
        "0       XC   left        -            n/a           n/a        -   \n",
-       "1       SI   left        -              *             *        -   \n",
-       "2       BI   left      n/a            n/a             *        *   \n",
-       "3       BN   left        -            n/a             *      n/a   \n",
-       "4       EB  right        *              *             *        *   \n",
+       "1       SI   left        -              -             -        -   \n",
+       "2       BI   left      n/a            n/a             -        *   \n",
+       "3       BN   left        -            n/a             -      n/a   \n",
+       "4       EB  right        -              *             *        -   \n",
        "5       KT  right        *            n/a             *      n/a   \n",
-       "6       FO  right        *              -             -        *   \n",
-       "7       KN  right        *              -             *        *   \n",
+       "6       FO  right        -              -             -        -   \n",
+       "7       KN  right        *              -             *        -   \n",
        "\n",
        "  space_posterior space_anterior  \n",
-       "0             n/a              *  \n",
-       "1             n/a              *  \n",
-       "2               *              *  \n",
-       "3             n/a              *  \n",
+       "0             n/a              -  \n",
+       "1             n/a              -  \n",
+       "2               -              -  \n",
+       "3             n/a              -  \n",
        "4               -              -  \n",
        "5             n/a              -  \n",
        "6             n/a              -  \n",
        "7             n/a            n/a  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
